objects/pse__Project_Versioning_Global_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control at an org level certain aspects of project versioning.</description>
    <fields>
        <fullName>pse__Capturing_Version_Config_Name__c</fullName>
        <description>This field is reserved for future development. Do not use.</description>
        <inlineHelpText>This field is reserved for future development. Do not use.</inlineHelpText>
        <label>DEPRECATED:Capturing Version Config Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Create_Version_Batch_Size__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Defines the batch size when creating Project Versions. The default value is 500.</description>
        <inlineHelpText>Defines the batch size when creating Project Versions. The default value is 500.</inlineHelpText>
        <label>Create Version Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Delete_Version_Batch_Size__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Defines the batch size when deleting Project Versions. The default value is 500.</description>
        <inlineHelpText>Defines the batch size when deleting Project Versions. The default value is 500.</inlineHelpText>
        <label>Delete Version Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__VPV_Quick_Help_Resource__c</fullName>
        <description>Defines the name of the static resource (with namespace prefix) to use for customizing language and graphics in the introduction Quick Help for Compare Versions. Leave blank to use the default resource.</description>
        <inlineHelpText>Defines the name of the static resource (with namespace prefix) to use for customizing language and graphics in the introduction Quick Help for Compare Versions. Leave blank to use the default resource.</inlineHelpText>
        <label>View Project Version Quick Help Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__VPV_Records_loaded_per_call__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Defines the number of records loaded in the detail view of View Project Versions. Increasing the value can improve load times but may encounter platform limits. The default value is 500. Entering 0 as a value for this field results in no records loading.</description>
        <inlineHelpText>Defines the number of records loaded in the detail view of View Project Versions. Increasing the value can improve load times but may encounter platform limits. The default value is 500. Entering 0 as a value for this field results in no records loading.</inlineHelpText>
        <label>View Project Version Records Loaded</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Versioning Global Settings</label>
</CustomObject>